[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "winlogview"
version = "1.0.0"
description = "Access, filter, and export Windows Event Viewer logs from Python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["windows", "event log", "eventlog", "winevt", "system monitor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Logging",
]

[project.optional-dependencies]
windows = ["pywin32>=306"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
winlogview = "winlogview.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"